[tool.poetry]
name = "repl_python3_forms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
emoji = "^1.6.1"
opencv-python = "^4.5.5"
pandas = "^1.4.2"
gspread = "^5.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
